--- a/flask_conversor/templates/base.html
+++ b/flask_conversor/templates/base.html
@@ -11,6 +11,8 @@
     <link href="{{url_for('static', filename='css/font-awesome.min.css')}}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="{{ url_for('static', filename='css/toastr.min.css') }}" rel="stylesheet">
+
+    {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -22,6 +24,7 @@
             <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
             <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
+ 
             <script>
                 toastr.options = {
                     "closeButton": true,
