--- a/flask_conversor/templates/login/login.html
+++ b/flask_conversor/templates/login/login.html
@@ -10,7 +10,7 @@
             <h4 class="titulo ms-3 d-inline-flex">Conversor</h4>
         </div>
         <div class="col-xl-3 col-lg-3 col-md-6 d-flex justify-content-end">
-            <a class="btn btn-danger signing " href=''>Inicia session</a>
+            <a class="btn btn-danger signing " href='/signup'>Registrate</a>
         </div>
     </div>
 </div>
